[gd_scene load_steps=9 format=2]

[ext_resource path="res://others/ExitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://others/PlayButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://windowxpbg.png" type="Texture" id=4]
[ext_resource path="res://TitleScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://title_screen/robotech.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://title_screen/robotech.ttf"

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 96.0
margin_top = 100.0
margin_right = 1800.0
margin_bottom = 1000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1704.0
margin_bottom = 364.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 368.0
margin_right = 1704.0
margin_bottom = 933.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 672.0
margin_right = 1032.0
margin_bottom = 565.0
size_flags_horizontal = 6
custom_constants/separation = 60
alignment = 1

[node name="LVL3" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_right = 360.0
margin_bottom = 65.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
text = "tutorial"
flat = false

[node name="LVL1" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 125.0
margin_right = 360.0
margin_bottom = 190.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
text = "level one"
flat = false

[node name="LVL2" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 250.0
margin_right = 360.0
margin_bottom = 315.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "level two"
flat = false

[node name="LVL4" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 375.0
margin_right = 360.0
margin_bottom = 440.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "level final"
flat = false

[node name="exit" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 500.0
margin_right = 360.0
margin_bottom = 565.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "exit"
flat = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/LVL3" to="." method="_on_LVL3_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LVL1" to="." method="_on_LVL1_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LVL2" to="." method="_on_LVL2_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LVL4" to="." method="_on_LVL4_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/exit" to="." method="_on_ExitButton_pressed"]
